tests/paczka2/big_fuzzy/17635573.err
Error in line 6: n1amKtliMwd S166 77,08
Error in line 14: 2Jqrl A591 94,4
Error in line 20: miait S166 49,5
Error in line 21: miait S675 55,3
Error in line 24: n1amKtliMwd S166 79,2
Error in line 25: miait S166 81,9
Error in line 36: n1amKtliMwd S166 85,6
Error in line 39: TWTmc14H A883 60,4
Error in line 42: TWTmc14H S166 1,8
Error in line 32: x3VWg6lhMl A591 40,4
Error in line 50: x3VWg6lhMl S675 16,9
Error in line 67: x3VWg6lhMl A591 79,7
Error in line 56: miait S675 36,8
Error in line 83: miait S166 41,6
Error in line 86: E8ds1s A591 58,2
Error in line 92: 2Jqrl A883 44,1
Error in line 95: TWTmc14H A883 15,8
Error in line 91: n1amKtliMwd A591 75,6
Error in line 80: x3VWg6lhMl A883 134,1
Error in line 93: 2Jqrl A591 86,3
Error in line 99: miait A591 107,7
Error in line 113: miait S675 21,9
Error in line 109: 2Jqrl A883 41,5
Error in line 135: 2Jqrl S675 7,68
Error in line 126: 2Jqrl S166 87,3
Error in line 134: TWTmc14H S166 10,7
Error in line 139: E8ds1s A883 31,9
Error in line 149: E8ds1s S166 24,8
Error in line 159: E8ds1s S675 65,8
Error in line 176: x3VWg6lhMl S675 44,6
Error in line 178: x3VWg6lhMl S166 78,7
Error in line 185: E8ds1s S675 60,4
Error in line 162: 2Jqrl S675 248,8
Error in line 194: x3VWg6lhMl S166 26,87
Error in line 191: x3VWg6lhMl S675 61,9
Error in line 199: TWTmc14H S166 100,0
Error in line 218: n1amKtliMwd S166 48,4
Error in line 229: A883 A883 416,9
Error in line 235: E8ds1s S675 -1,3
Error in line 234: A883 S166 0,1
Error in line 215: E8ds1s S675 74,7
Error in line 241: miait S675 37,8
Error in line 247: E8ds1s S675 8,5
